# WIN

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.Cygwin  README.MacOSX  acconfig.h  acinclude.m4  configure.in  mkinstalldirs
etc/: 991109.064607  991109.064607.ch  Makefile.am  README  channels.tbl  events.prm  filter.prm  labels.tbl  map.japan.km  nxtzones.tbl  pmon.prm  struct.tbl  win.conf  win.prm  win.prm.auto  winap.prm  wtape.prm  zones.tbl
html/: anoncvs.html  mailing-list.html  tip.txt  win_hack.txt
man/: Makefile  Makefile.am  _bj.1  _update.1  automan.1  autopick.1  chtbl_ck.1  ck_ls8800cst.1  clean_nmx.1  cmg.1  cormeisei.1  dat.1  dewin.1  ecore.1  elist.1  events.1  extraw.1  find_picks.1  fromtape.1  hypomh.1  insert_raw.1  insert_raw2.1  insert_trg.1  intro_win.1  latest.1  lily.1  lpf_lbpvf.1  ls7000_A8.1  ls7000_A9.1  ls8tel16_raw.1  ls8tel16_win.1  ls8tel_STM.1  ls8tel_STS.1  makefile.1  mk_windata.1  mkpicknoise.1  newym.1  order.1  order2.1  pick2pick.1  (+67 more)
man.en/: Makefile.am  _bj.1  _update.1  automan.1  autopick.1  clean_nmx.1  cormeisei.1  dewin.1  ecore.1  elist.1  events.1  extraw.1  find_picks.1  fromtape.1  hypomh.1  insert_raw.1  insert_raw2.1  insert_trg.1  latest.1  lpf_lbpvf.1  ls8tel16_raw.1  ls8tel16_win.1  ls8tel_STM.1  ls8tel_STS.1  mkpicknoise.1  newym.1  order.1  pick2pick.1  pickfile.1  pmon.1  ras2lips.1  ras2rpdl.1  raw2mon.1  raw_100.1  raw_ch.1  raw_mon.1  raw_raw.1  raw_shift.1  raw_time.1  recvnmx.1  (+34 more)
pick/: 991109.064606.854  Makefile.am
prog/: Makefile.am  _bj  _bj1  _bj2  _cont  _find  _joint  _kill  _mon  _monit  _stop  _update  _update1  _update2  _win  ap  automan  autopick  bj  ch2mf  ch2mf.in  check_status_sh  chtbl2kml  ck_ls8800cst.in  ck_wdisk.sh  clean_nmx  copy_trg_from_sso  cpraw.in  daily_rawdiff  daily_windiff  datej.pl.in  denoise  dist_tbl  ea  ee  ee_manager  ee_manager.in  eee  el  final  (+69 more)
src/: AUTHORS  ChangeLog  FUNC.txt  Makefile.am  NEWS  README  acconfig.h  adj_time_m.c  chtbl_ck.c  cmg.c  configure.in  cormeisei.c  cvt.c  cvt.h  daemon_mode.c  daemon_mode.h  dewin.c  ecore.c  ecore2.c  elist.c  evdetect.c  events.c  extraw.c  file_older.c  fileblocks.c  filter.c  filter.h  final2finalb.c  finalb2final.c  finalb2seis.c  find_picks.c  fromtape.c  gc_leak_detector.h  hypomh.f  hypomh_m.f  hypomhc.c  hypomhc2.c  insert_raw.c  insert_trg.c  lily.c  (+117 more)
src/2way/: recvt.c
tools/: Makefile.am
tools/TKY2JGD/: Makefile.am  README  ch2tky2jgd.c  delta.c  final2tky2jgd.c  map2tky2jgd.c  tky2jgd.html  tky2jgd2ch1.c  tky2jgd2ch2.c  tky2jgd2final.c  tky2jgd2map.c  tky2jgd_final.html  tky2jgd_map.html
